<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/resumo_compra_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/resumo_compras_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/resumo_compra_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/resumo_compra_parabens"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_banner"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_banner"
        app:layout_constraintTop_toTopOf="@id/resumo_compra_banner"
        app:layout_constraintBottom_toBottomOf="@id/resumo_compra_banner"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/resumo_compra_msg_sucesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/resumo_compra_msg_sucesso"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_parabens"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_parabens"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_parabens" />

    <TextView
        android:id="@+id/resumo_compra_enunciado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/resumo_compra_enun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_banner" />

    <ImageView
        android:id="@+id/resumo_compra_imagem_pacote"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/resumo_compra_imagem_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_enunciado"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_compra_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_imagem_pacote"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/resumo_compra_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_local"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_local"
        tools:text="08/12 - 10/12 de 2019" />

    <TextView
        android:id="@+id/resumo_compra_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_data"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_data"
        tools:text="R$ 243,99" />

    <Button
        android:id="@+id/resumo_compra_botao_inicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/botao_arredondado_laranja"
        android:contentDescription="@string/botao_de_retorno_ao_inicio"
        android:text="@string/voltar_ao_inicio"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>