<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ListaPacotesActivity">

    <ImageView
        android:id="@+id/lista_banner"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/lista_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/especiais"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/lista_banner"
        app:layout_constraintEnd_toEndOf="@id/lista_banner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/lista_banner"
        app:layout_constraintTop_toTopOf="@id/lista_banner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lista_pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pais"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lista_titulo"
        app:layout_constraintTop_toBottomOf="@+id/lista_titulo" />

    <ListView
        android:id="@+id/lista_pacotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        tools:listitem="@layout/item_pacote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lista_banner"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>